--- a/RF.ipynb
+++ b/RF.ipynb
@@ -26,13 +26,13 @@
     "input_file = \"data.csv\"\n",
     "dataset = pd.read_csv(input_file, header = 0)\n",
     "d=dataset\n",
-    "input_file = \"0822/closed.dat\"\n",
+    "input_file = \"closed.dat\"\n",
     "b = pd.read_csv(StringIO(''.join(l.replace('\\t',' ') for l in open(input_file))), header = None, sep=' ')\n",
     "for name in ['4pir', '6be1', '6his','2bg9','3jad','6ubs','6huk','7koo']:\n",
     "    c=b[b.eq(name).any(axis=1)].iloc[:,1:4]\n",
     "    d=pd.concat([d,c])\n",
     "d.iloc[:40,11:14]=d.iloc[-40:,11:14]\n",
-    "input_file = \"0822/open.dat\"\n",
+    "input_file = \"open.dat\"\n",
     "b = pd.read_csv(StringIO(''.join(l.replace('\\t',' ') for l in open(input_file))), header = None, sep=' ')\n",
     "for name in ['6dg8','6hin','6y5a','7kox','6ud3','3jae']:\n",
     "    c=b[b.eq(name).any(axis=1)].iloc[:,1:4]\n",
